# attention-tracker

./: .gitignore  data.sample.jsonl  pyproject.toml
src/attention_tracker_repro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/experiments/: compare_last_token_attention.py  inspect_last_token_attention.py
src/last_token_attention/: __init__.py  attention.py  cli.py  compare_cli.py  config.py  modeling.py  plots.py  prompting.py  token_span.py
